--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "discord.js": "^12.5.3",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "sequelize": "^6.6.2",
+    "sequelize-auto": "^0.8.1",
+    "sequelize-cli": "^6.2.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5"
   }
 }
